# agent-guard-plugin

./: AGENTS.md
agent-guard-plugin/: .gitignore  .workflow.yaml  package.json  plugin.json  pyproject.toml
agent-guard-plugin/.agent-guard/skills/: failure-analysis.md  plan-yaml.md  using-workflow.md  workflow-core.md
agent-guard-plugin/.codex/: hooks.json
agent-guard-plugin/docs/: ddd-dsl-layers.md  ddd-file-write-policy.md  ddd-workflow-engine.md  design-note.md  grouped-workflow.example.yaml  runtime-install.md  workflow-schema.md  workflow.example.yaml
agent-guard-plugin/docs/skills/: docs-workflow.md  (+7 more)
agent-guard-plugin/fuse-runtime/: Cargo.toml
agent-guard-plugin/hooks/: after-command.sh  before-final-response.sh  before-write.sh  failure-loop.sh  job-monitor.sh  session-start.sh
agent-guard-plugin/lib/: events.js  failures.js  gates.js  install.js  jobs.js  path-policy.js  plan.js  runtime-adapter.js  state.js
agent-guard-plugin/templates/: failure-analysis.md  plan.example.yaml  review.schema.json
agent-guard-plugin/tests/: __init__.py  failures.test.js  gates.test.js  helpers.js  helpers.py  install.test.js  path-policy.test.js  state.test.js  test_cli_help.py  test_domain_models.py  test_failures.py  test_file_lock.py  test_file_lock_integration.py  test_fuse_integration.py  test_gates.py  test_install.py  test_interactive.py  test_path_policy.py  test_plan.py  test_repositories.py  test_runtime_bridge.py  test_runtime_integrations.py  test_session_start.py  test_stage_behaviors.py  test_state.py  test_task_reset.py  test_transitions.py  test_verify_command.py  test_wizard.py  test_workflow_commands.py  test_workflow_spec.py
agent-guard-plugin/workflows/: default.workflow.yaml  docs.workflow.yaml  research.workflow.yaml
(+48 files in other folders)
