[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-guard-plugin"
version = "0.2.0"
description = "Minimal runtime guard plugin for coding agents"
readme = "docs/runtime-install.md"
requires-python = ">=3.11"
dependencies = [
  "prompt-toolkit>=3.0",
  "pyyaml>=6.0",
]

[project.scripts]
agent-guard = "agent_guard.cli:main"
install-agent-guard = "agent_guard.cli:install_main"
uninstall-agent-guard = "agent_guard.cli:uninstall_main"
agent-guard-bridge = "agent_guard.runtime_bridge:main"

[dependency-groups]
dev = [
  "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/agent_guard"]

[tool.hatch.build.targets.wheel.force-include]
".workflow.yaml" = "agent_guard/.workflow.yaml"
"docs/skills/failure-analysis.md" = "agent_guard/_bundled_skills/failure-analysis.md"
"docs/skills/finalization-checklist.md" = "agent_guard/_bundled_skills/finalization-checklist.md"
"docs/skills/plan-yaml.md" = "agent_guard/_bundled_skills/plan-yaml.md"
"docs/skills/using-workflow.md" = "agent_guard/_bundled_skills/using-workflow.md"
"docs/skills/workflow-core.md" = "agent_guard/_bundled_skills/workflow-core.md"
